# optimal_navigation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: optimal_control_interface.h
launch/: drone_2_opt_node.launch  drone_4_opt_node.launch  drone_6_opt_node.launch  opt_control_node.launch  optitrack_sim.launch
script/: .tmuxinator.yml  install.py  script.py  ual_script.py
script/windmill/: .tmuxinator.yml  readme.txt
shot_executer/: CMakeLists.txt  package.xml
shot_executer/include/: shot_executer.h  shot_executer_MRS.h  shot_executer_UAL.h
shot_executer/launch/: shot_executer.launch  shot_executer_grvc.launch
shot_executer/msg/: DesiredShot.msg
shot_executer/src/: shot_executer.cpp  shot_executer_MRS.cpp  shot_executer_UAL.cpp  shot_executer_node.cpp
shot_executer/srv/: ShootingAction.srv
solver/: FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_100.c  objfunGlobal_target_model.m  objfunN.m  setup_solver_target_model.m
src/: main.cpp  optimal_control_interface.cpp  shot_executer.cpp  trajectory_follower.cpp
test/: trajectory_planner_test.py
trajectory_follower/: CMakeLists.txt  package.xml
trajectory_follower/launch/: trajectory_follower.launch
trajectory_follower/src/: trajectory_follower.cpp
trajectory_optimization_layer/: CMakeLists.txt  package.xml  solver_nodelet.xml
trajectory_optimization_layer/include/: ACADO.h  FORCESNLPsolver.h  FORCES_PRO.h  UAVState.h  backendSolver.h  backendSolverMRS.h  backendSolverUAL.h  logger.h  numericalSolver.h  solver.h  solver_acado.h  solver_acado_durable.h  solver_forces_pro.h  solver_nodelet.h  utils.h
trajectory_optimization_layer/launch/: drone_2_opt_node.launch  drone_5_opt_node.launch  drone_6_opt_node.launch  followers.launch  karting.launch  nodelet.launch  opt_control_node.launch  optimal_planning_ual.launch  rosbag.launch  rviz.launch  rviz_ual.launch  traj_follower.launch
trajectory_optimization_layer/logs/: acado_log_1.csv  trajectories_1.csv
trajectory_optimization_layer/msg/: Solver.msg
trajectory_optimization_layer/rviz/: grvc.rviz  mrs.rviz  uav1.rviz
trajectory_optimization_layer/solver/: FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_100.c  FORCESNLPsolver_model_40.c  setup_solver_target_model.m
trajectory_optimization_layer/solver/acado_matlab_formulation/FormulacionRH/: addpaths.m  formulation_RH.m  main.m  one_drone_simple_trajectory.cpp  one_drone_simple_trajectory_data_acadodata_M1.txt  readme.txt
trajectory_optimization_layer/solver/acado_matlab_formulation/FormulacionRH_Alfonso/: addpaths.m  draw3.m  formulation.m  formulation_RH.m  main.m  one_drone_simple_trajectory.cpp  one_drone_simple_trajectory_data_acadodata_M2.txt
trajectory_optimization_layer/solver/acado_matlab_formulation/FormulacionSencilla/: addpaths.m  draw2.m  formulation.m  main.m  one_drone_simple_trajectory.cpp  plot_circle.m
trajectory_optimization_layer/solver/acado_matlab_formulation/OneDroneFormulation/: addpaths.m  draw3.m  formulation.m  initialization.m  main.m  param.m  param_path.m  prueba.m
trajectory_optimization_layer/solver/acado_matlab_formulation/OneDroneFormulation/calculate_path/: calculate_path.m  calculate_path_for_rh.m  cylinder_path.m  draw.m  get_full_path.m  path2.fig
trajectory_optimization_layer/solver/acado_matlab_formulation/RecedingHorizonFormulation/: addpaths.m  draw3.m  formulation.m  formulation_RH.m  formulation_simple.m  main.m  one_drone_simple_trajectory.cpp  one_drone_simple_trajectory_data_acadodata_M2.txt  param.m  param_path.m  readme.txt
trajectory_optimization_layer/src/: ACADO.cpp  FORCES_PRO.cpp  UAVState.cpp  backendSolver.cpp  backendSolverMRS.cpp  backendSolverUAL.cpp  backend_FORCES.cpp  logger.cpp  numericalSolver.cpp  solver.cpp  solver_acado.cpp  solver_acado_durable.cpp  solver_forces_pro.cpp  solver_node.cpp  solver_nodelet.cpp
trajectory_optimization_layer/test/: trajectory_planner_test.py
trajectory_optimization_layer/worlds/: real.world
visualizer/: CMakeLists.txt  package.xml
visualizer/launch/: visualizer.launch
visualizer/src/: visualizer.py
